# victoria_navigation

./: .travis.yml  CMakeLists.txt  README.md  package.xml
config/: alameda_county_fairgrounds_asphault.yaml  alameda_county_fairgrounds_course_2016.yaml  alameda_county_fairgrounds_course_2017_bonus_cones_2_v1.yaml  alameda_county_fairgrounds_course_2017_no_bonus_v1.yaml  alameda_county_fairgrounds_park1.yaml  alameda_county_fairgrounds_park2.yaml  costmap_common.yaml  neato_parking_lot.yaml  planner.yaml  wimble_driveway_waypoints.yaml  wimble_patio_waypoints.yaml
doc/: Operation.md  strategy.md
include/victoria_navigation/: discover_cone.h  move_from_cone.h  move_to_cone.h  seek_to_gps.h  solve_robomagellan.h  strategy_context.h  strategy_exception.h  strategy_fn.h
launch/: #robo_magellan.launch#  cone_finder_strategy.launch  depth_to_laserscan.launch  exploration.launch  exploration_demo.launch  gmapping_demo.launch  ianthe_cone_finder_strategy.launch  ianthe_robo_magellan.launch  move_base.launch  move_base_mapless_demo.launch  robo_magellan.launch
src/: cone_finder_strategy_node.cpp  discover_cone.cpp  move_from_cone.cpp  move_to_cone.cpp  robo_magellan_node.cpp  seek_to_gps.cpp  solve_robomagellan.cpp  strategy_context.cpp  strategy_fn.cpp
srv/: PushGoal.srv
