<?xml version="1.0"?>
<package format="2">
  <name>victoria_navigation</name>
  <version>0.2.7</version>
  <description>Autonomous navigation demos for Victoria robot</description>

  <author email="jrcapriles@gmail.com">Jose Capriles</author>

  <maintainer email="jrcapriles@gmail.com">Jose Capriles</maintainer>

  <license>MIT</license>

  <url type="bugtracker">https://github.com/victoriarobotics/victoria_navigation/issues</url>
  <url type="repository">https://github.com/victoriarobotics/victoria_navigation</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>amcl</depend>
  <depend>base_local_planner</depend>
  <depend>dwa_local_planner</depend>
  <depend>frontier_exploration</depend>
  <depend>geometry_msgs</depend>
  <depend>gmapping</depend>
  <depend>map_server</depend>
  <depend>move_base</depend>
  <depend>navfn</depend>
  <depend>roscpp</depend>
  <depend>roslaunch</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>victoria_perception</depend>
  <export>
  </export>
</package>
