<?xml version="1.0"?>
<package format="2">
  <name>victoria_navigation</name>
  <version>0.2.7</version>
  <description>Autonomous navigation demos for Victoria robot</description>

  <author email="jrcapriles@gmail.com">Jose Capriles</author>

  <maintainer email="jrcapriles@gmail.com">Jose Capriles</maintainer>

  <license>MIT</license>

  <url type="bugtracker">https://github.com/victoriarobotics/victoria_navigation/issues</url>
  <url type="repository">https://github.com/victoriarobotics/victoria_navigation</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>amcl</depend>
  <depend>angles</depend>
  <depend>base_local_planner</depend>
  <depend>dwa_local_planner</depend>
  <depend>frontier_exploration</depend>
  <depend>geometry_msgs</depend>
  <depend>gmapping</depend>
  <depend>gps_common</depend>
  <depend>map_server</depend>
  <depend>move_base</depend>
  <depend>navfn</depend>
  <depend>roscpp</depend>
  <depend>roslaunch</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>depthimage_to_laserscan</depend>
  <depend>victoria_perception</depend>
  <depend>yaml-cpp</depend>
  <export>
  </export>
</package>
